# tllt-cp

./: .build.yml  .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build  meson_options.txt  meson_post_install.sh
data/: com.gitlab.tristan957.TlltCp.appdata.xml.in  com.gitlab.tristan957.TlltCp.gschema.xml  com.gitlab.tristan957.tllt-cp.appdata.xml.in  com.gitlab.tristan957.tllt-cp.desktop.in  com.gitlab.tristan957.tllt-cp.gschema.xml  ht.sr.git.tristan957.tllt-cp.appdata.xml.in  ht.sr.git.tristan957.tllt-cp.desktop.in  ht.sr.git.tristan957.tllt-cp.gschema.xml  meson.build  tllt-cp-resources.gresource.xml
data/css/: style.css
data/ui/: tllt-cp-feedback-dialog.ui  tllt-cp-login-window.ui  tllt-cp-new-recipe-window.ui  tllt-cp-recipe-list-item.ui  tllt-cp-window.ui
docs/: libtllt-cp-docs.xml  libtllt-cp.txt  meson.build
docs/reference/: libtllt-cp-docs.xml  libtllt-cp.txt  meson.build
docs/reference/xml/: meson.build
driver/: meson.build  tllt-driver.c  tllt-driver.h  tllt-error.h  tllt-powerable.c  tllt-powerable.h  tllt-readable.h  tllt-scale.c  tllt-thermistor.c  tllt-toaster.c  tllt-toaster.h  tllt-util.h
driver/components/: tllt-heating-element.c  tllt-heating-element.h
driver/sensors/: tllt-scale.c  tllt-scale.h  tllt-sensor.c  tllt-sensor.h  tllt-thermistor.c  tllt-thermistor.h
driver/sensors/ifaces/: tllt-powerable.h  tllt-readable.c
include/: tllt-cp-application.h
lib/: meson.build  tllt-cp-client.c  tllt-cp-client.h  tllt-cp-enumtypes.c.template  tllt-cp-error.c  tllt-cp-error.h  tllt-cp-ex.c  tllt-cp-ex.h  tllt-cp-recipe.c  tllt-cp-recipe.h  tllt-cp-user.c  tllt-cp-user.h  tllt-cp.h  tllt-cp.map
lib/dto/: tllt-cp-authentication-dto.c  tllt-cp-authentication-dto.h  tllt-cp-cooking-details-dto.c  tllt-cp-cooking-details-dto.h  tllt-cp-create-recipe-dto.c  tllt-cp-create-recipe-dto.h  tllt-cp-create-user-dto.c  tllt-cp-create-user-dto.h  tllt-cp-user-feedback-dto.c  tllt-cp-user-feedback-dto.h
lib/tests/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  tllt-cp-app-menu.ui  tllt-cp-application.c  tllt-cp-feedback-dialog.c  tllt-cp-feedback-dialog.h  tllt-cp-header-bar.c  tllt-cp-header-bar.h  tllt-cp-login-window.c  tllt-cp-login-window.h  tllt-cp-new-recipe-window.c  tllt-cp-new-recipe-window.h  tllt-cp-recipe-list-item.c  tllt-cp-recipe-list-item.h  tllt-cp-recipe-sidebar.c  tllt-cp-recipe-sidebar.h  tllt-cp-recipe-sidebar.ui  tllt-cp-resources.gresource.xml  tllt-cp-window.c  tllt-cp-window.h  tllt-cp-window.ui
src/login/: tllt-cp-login-dialog.c  tllt-cp-login-dialog.h  tllt-cp-login-dialog.ui  tllt-cp-login-window.c  tllt-cp-login-window.h  tllt-cp-login-window.ui
src/style/: style.css
tests/: meson.build
tests/driver/: meson.build  test-heating-elements.c  test-powerable.c  test-thermistor-raw.c  test-thermistor.c  test-wiringPi.c  test.config.json
tests/lib/: meson.build  test-client.c
