option('with-docs', type: 'boolean', value: false)
option('with-vapi', type: 'boolean', value: false)
option('with-driver', type: 'boolean', value: false,
	description: 'Build libtllt-cp-driver'
)
option('lib-only', type: 'boolean', value: false,
	description: 'Only build libtllt-cp, ommitting the frontend'
)
