option('with-docs', type: 'boolean', value: false)
option('with-vapi', type: 'boolean', value: false)
option('with-driver', type: 'boolean', value: false,
	description: 'Build libtllt'
)
option('with-gpio', type: 'boolean', value: false,
	description: '''Build libtllt with GPIO support. If false, dummy values
		are returned''')
option('with-tests', type: 'boolean', value: true, description: 'Build with tests')
option('lib-only', type: 'boolean', value: false,
	description: 'Only build libtllt-cp, ommitting the frontend'
)
